# semclDataset

./: .gitignore  CMakeLists.txt  dataset_conv.cpp  main.cpp  readme.md  voc_conv.cpp
